--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -40,7 +40,7 @@
             android:layout_height="60dp"
             android:layout_marginTop="20dp"
             android:ems="10"
-            android:inputType="phone"
+            android:inputType="text"
             android:textColor="#000000"
             android:textSize="24sp"
             android:textStyle="bold" />
