--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -52,11 +52,13 @@
             android:textStyle="bold" />
 
         <Button
+            android:layout_marginLeft="50dp"
+            android:layout_marginRight="50dp"
+            android:background="@drawable/custombtndangky"
+            android:textColor="@color/mauden"
             android:id="@+id/btnDangKy"
-            android:layout_width="311dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Dang Ky" />
-
-
+            android:text="Đăng Ký" />
     </LinearLayout>
 </LinearLayout>
