--- a/app/src/main/res/layout/register.xml
+++ b/app/src/main/res/layout/register.xml
@@ -24,7 +24,7 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/textViewSDT"
+            android:id="@+id/twSDT"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginTop="100dp"
@@ -49,6 +49,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Đăng Ký" />
+
+        <TextView
+            android:id="@+id/twThongBao"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
     </LinearLayout>
 
