update man hinh chi
update man hinh chi

--- a/app/src/main/res/layout/activity_man_hinh_chi_tien.xml
+++ b/app/src/main/res/layout/activity_man_hinh_chi_tien.xml
@@ -18,14 +18,6 @@
         tools:layout_editor_absoluteX="1dp"
         tools:layout_editor_absoluteY="11dp">
 
-        <Spinner
-            android:id="@+id/spin"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center">
-
-        </Spinner>
-
         <ImageButton
             android:id="@+id/imageButton2"
             android:layout_width="wrap_content"
@@ -61,7 +53,7 @@
             android:backgroundTint="#E2E2E2"
             android:ems="10"
             android:gravity="right"
-            android:inputType="textPersonName"
+            android:inputType="number"
             android:text="0"
             android:textColor="#F44336"
             android:textSize="36sp"
@@ -83,12 +75,6 @@
             android:layout_weight="1"
             android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/txtIdCategory"
-                android:visibility="gone"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-
             <ImageView
                 android:id="@+id/imgQuestion"
                 android:layout_width="match_parent"
@@ -96,6 +82,12 @@
                 android:layout_marginLeft="20dp"
                 android:layout_weight="6"
                 app:srcCompat="@drawable/icon_question" />
+
+            <TextView
+                android:id="@+id/txtIdCategory"
+                android:visibility="gone"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
 
             <EditText
                 android:id="@+id/edtCategory"
@@ -116,10 +108,7 @@
                 android:cursorVisible="false"
                 android:focusable="false"
                 android:focusableInTouchMode="false">
-
             </EditText>
-
-
 
 
         </LinearLayout>
@@ -131,7 +120,7 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:id="@+id/imageView7"
+                android:id="@+id/imgDienGiai"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="20dp"
@@ -148,7 +137,7 @@
                 android:ems="10"
                 android:hint="Diễn giải"
                 android:inputType="textPersonName"
-                android:textColor="#798083"
+                android:textColor="#000000"
                 android:textSize="18sp" />
         </LinearLayout>
 
@@ -159,7 +148,7 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:id="@+id/imageView8"
+                android:id="@+id/imgCalendar"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="20dp"
@@ -174,8 +163,7 @@
                 android:layout_weight="1"
                 android:backgroundTint="#E2E2E2"
                 android:ems="10"
-                android:hint="yyyy-mm-dd input"
-                android:textColor="#798083"
+                android:textColor="#000000"
                 android:inputType="textPersonName" />
         </LinearLayout>
 
@@ -309,78 +297,6 @@
             </LinearLayout>
         </LinearLayout>
 
-        <LinearLayout
-            android:background="#FFFFFF"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:orientation="horizontal">
-
-
-            <Button
-                android:id="@+id/btnhome"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:background="@drawable/custombutton_color_white"
-                android:drawableTop="@drawable/icon_home"
-                android:outlineSpotShadowColor="#FFFFFF"
-                android:text="Tổng quan"
-                android:textAllCaps="false"
-                android:textColor="#747474"
-                android:textSize="12sp"></Button>
-
-            <Button
-                android:id="@+id/btnwallet"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:background="@drawable/custombutton_color_white"
-                android:drawableTop="@drawable/wallet_2"
-                android:outlineSpotShadowColor="#FFFFFF"
-                android:text="Tài khoản"
-                android:textAllCaps="false"
-                android:textColor="#747474"
-                android:textSize="12sp" />
-
-            <ImageButton
-                android:id="@+id/imageButton"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:background="@drawable/custombutton_color_white"
-                android:outlineSpotShadowColor="#FFFFFF"
-                app:srcCompat="@drawable/icon_plus" />
-
-            <Button
-                android:id="@+id/btnhanmucchi"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:background="@drawable/custombutton_color_white"
-                android:drawableTop="@drawable/icon_hanmucchi"
-                android:outlineSpotShadowColor="#FFFFFF"
-                android:text="Hạn mức chi"
-                android:textAllCaps="false"
-                android:textColor="#747474"
-                android:textSize="12sp" />
-
-            <Button
-                android:id="@+id/btnother"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:background="@drawable/custombutton_color_white"
-                android:drawableTop="@drawable/other"
-                android:outlineSpotShadowColor="#FFFFFF"
-                android:text="Khác"
-                android:textAllCaps="false"
-                android:textColor="#747474"
-                android:textSize="12sp" />
-        </LinearLayout>
     </LinearLayout>
-
-
-
 
 </LinearLayout>
