--- a/app/src/main/res/layout/activity_man_hinh_thu_chi.xml
+++ b/app/src/main/res/layout/activity_man_hinh_thu_chi.xml
@@ -8,12 +8,12 @@
     tools:context=".ManHinhThuChi">
 
     <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar2"
+        android:id="@+id/tb2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?attr/colorPrimary"
         android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme" />
+        android:theme="@style/ToolbarTheme" />
 
     <TabHost
         android:id="@+id/tabhost"
