--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,13 +8,30 @@
         <item name="colorPrimaryDark">#087DB3</item>
         <item name="colorAccent">@color/colorAccent</item>
         //Đổi màu chữ title
-        <item name="android:textColorPrimary">#FFFFFF</item>
+        <item name="android:textColorPrimary">#000000</item>
+        <item name="actionMenuTextColor">@android:color/holo_green_light</item>
+        <item name="colorControlHighlight">#111</item>
     </style>
 
     <style name="TabWidgetTheme" parent="AppTheme">
         <item name="android:textColorPrimary">#000000</item>
         <item name="android:textColorSecondary">#000000</item>
+
     </style>
 
+    <style name="ToolbarTheme" parent="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+        <!-- android:textColorPrimary: Màu chữ Tiêu đề  -->
+        <item name="android:textColorPrimary">#FFFFFF</item>
+        <!-- actionMenuTextColor: Màu chữ Menu  -->
+        <item name="actionMenuTextColor">@android:color/holo_green_light</item>
+        <!-- Tints -->
+        <item name="colorAccent">#a13636</item>
+        <!-- Màu áp dụng cho các View ở trạng thái bình thường -->
+        <item name="colorControlNormal">#FFFFFF</item>
+        <!-- Màu View đang hoạt động -->
+        <item name="colorControlActivated">#934848</item>
+        <!-- Highlight (i.e ripples or list selectors) -->
+        <item name="colorControlHighlight">#111</item>
+    </style>
     
 </resources>
