--- a/app/src/main/res/layout/custom_listview_wallet.xml
+++ b/app/src/main/res/layout/custom_listview_wallet.xml
@@ -6,6 +6,7 @@
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
+        android:background="#FFFFFF"
         android:layout_height="70dp"
         android:layout_centerVertical="true">
 
