--- a/app/src/main/res/layout/activity_man_hinh_thu_chi.xml
+++ b/app/src/main/res/layout/activity_man_hinh_thu_chi.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,19 +7,12 @@
     android:orientation="vertical"
     tools:context=".ManHinhThuChi">
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/tb2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="?attr/colorPrimary"
-        android:minHeight="?attr/actionBarSize"
-        android:theme="@style/ToolbarTheme" />
 
     <TabHost
         android:id="@+id/tabhost"
         android:theme="@style/TabWidgetTheme"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -34,18 +27,13 @@
             <FrameLayout
                 android:id="@android:id/tabcontent"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content">
 
                 <LinearLayout
                     android:id="@+id/tab1"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="vertical">
-
-                    <ListView
-                        android:id="@+id/lvthu"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -53,14 +41,15 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="vertical">
-
-                    <ListView
-                        android:id="@+id/lvchi"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent" />
                 </LinearLayout>
 
             </FrameLayout>
         </LinearLayout>
     </TabHost>
-</LinearLayout>
+
+    <ListView
+        android:id="@+id/lv_load_category"
+        android:layout_below="@id/tabhost"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+</RelativeLayout>
