--- a/app/src/main/res/layout/activity_man_hinh_nhom.xml
+++ b/app/src/main/res/layout/activity_man_hinh_nhom.xml
@@ -33,7 +33,8 @@
         <TextView
             android:layout_marginRight="12dp"
             android:layout_gravity="right"
-            android:id="@+id/textView7"
+            android:id="@+id/txtNameWl"
+            android:textColor="#000000"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Hiển thị id ví"
@@ -42,37 +43,21 @@
 </androidx.appcompat.widget.Toolbar>
 
     <TextView
+        android:layout_marginTop="10dp"
         android:id="@+id/textView8"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
-        android:text="Khoản thu"
+        android:text="Danh sách tất cả các nhóm"
         android:textStyle="bold"
         android:textSize="18sp" />
 
-    <ListView
-        android:id="@+id/lvkhoanthu"
-        android:layout_width="match_parent"
-        android:layout_height="254dp">
-
-    </ListView>
-
-    <TextView
-        android:id="@+id/textView9"
-        android:layout_width="match_parent"
-        android:layout_height="20dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginBottom="7dp"
-        android:text="Khoản chi"
-        android:textStyle="bold"
-        android:textSize="18sp" />
 
     <ListView
+        android:layout_marginTop="15dp"
         android:id="@+id/lvKhoanChi"
         android:layout_width="match_parent"
-        android:layout_height="257dp">
-
-    </ListView>
+        android:layout_height="507dp"></ListView>
 
     <ImageView
         android:id="@+id/imgAdd"
