--- a/app/src/main/res/drawable/custom_mauxanhgiongtoolbar.xml
+++ b/app/src/main/res/drawable/custom_mauxanhgiongtoolbar.xml
@@ -5,13 +5,13 @@
 
     <!-- Set màu nền-->
     <solid
-        android:color="#0099DD">
+        android:color="#00AFF0">
     </solid>
 
     <!-- đặt thuộc tính màu và độ rộng của đường viền -->
     <stroke
         android:width="1dp"
-        android:color="#0099DD" >
+        android:color="#00AFF0" >
     </stroke>
 
     <!-- các thuộc tính căn chỉnh-->
