--- a/app/src/main/res/layout/activity_man_hinh_sua_category.xml
+++ b/app/src/main/res/layout/activity_man_hinh_sua_category.xml
@@ -64,51 +64,45 @@
                 android:layout_height="wrap_content" >
 
                 <RadioButton
+                    android:checked="true"
+                    android:layout_marginRight="7dp"
                     android:id="@+id/radthu"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="7dp"
-                    android:checked="true"
-                    android:enabled="false"
                     android:text="Khoản thu" />
 
                 <RadioButton
+                    android:layout_marginLeft="7dp"
                     android:id="@+id/radchi"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="7dp"
-                    android:enabled="false"
                     android:text="Khoản chi" />
             </RadioGroup>
         </LinearLayout>
-
         <LinearLayout
-            android:id="@+id/linear"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:orientation="horizontal">
 
             <ImageView
+                android:layout_marginLeft="20dp"
                 android:id="@+id/imgNhomCha"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="20dp"
                 android:layout_weight="6"
                 app:srcCompat="@drawable/icon_hanmucchi" />
 
             <EditText
+                android:layout_marginLeft="10dp"
                 android:id="@+id/editNhomCha"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="10dp"
                 android:layout_weight="1"
                 android:ems="10"
-                android:enabled="false"
                 android:hint="Nhóm cha"
                 android:inputType="textPersonName" />
         </LinearLayout>
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -124,15 +118,14 @@
                 app:srcCompat="@drawable/wallet_1" />
 
             <EditText
+                android:layout_marginLeft="10dp"
                 android:id="@+id/editvi"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="10dp"
                 android:layout_weight="1"
                 android:ems="10"
-                android:enabled="false"
-                android:hint="Ví"
-                android:inputType="textPersonName" />
+                android:inputType="textPersonName"
+                android:hint="Ví" />
         </LinearLayout>
     </LinearLayout>
 
