--- a/app/src/main/res/layout/activity_man_hinh_sua_category.xml
+++ b/app/src/main/res/layout/activity_man_hinh_sua_category.xml
@@ -80,6 +80,7 @@
             </RadioGroup>
         </LinearLayout>
         <LinearLayout
+            android:id="@+id/linear"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
