--- a/app/src/main/res/menu/menuvi.xml
+++ b/app/src/main/res/menu/menuvi.xml
@@ -4,9 +4,8 @@
 
 
     <item
-        android:id="@+id/menu1"
-        android:icon="@android:drawable/ic_menu_edit"
-        android:title="Menu 1"
+        android:id="@+id/menusua"
+        android:title="Sửa"
         app:showAsAction="always" />
 
 
